Gradle Build: ensure javaexec calls are not using the binary stub by accident, and are using the supplied JAVA to execute